# Research-Copilot-for-NotebookLM

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  cli.py  main.py  ui.py
app/api/: routes_health.py  routes_notebooks.py  routes_research.py  routes_workspaces.py
app/core/: __init__.py  config.py  exceptions.py
app/models/: artifact.py  bundle_preset.py  export.py  history.py  notebook.py  query.py  report.py  search_view.py  snapshot.py  template.py  workspace.py
app/services/: bundle_preset_service.py  export_service.py  notebook_registry.py  notebooklm_client.py  prompt_templates.py  research_service.py  search_view_service.py  template_service.py  workspace_service.py
app/storage/: file_store.py  (+1 more)
assets/: README.md
data/: bundle_presets.json  history.json  notebooks.json  search_views.json  snapshots.json  templates.json  workspaces.json
examples/: portfolio-demo.md
scripts/: demo_seed.sh  go_live_demo.sh  notebooklm_bridge.py
tests/: conftest.py  test_artifacts.py  test_batch_template_endpoint.py  test_bridge_client.py  test_bundle_presets.py  test_cli_doctor.py  test_exports.py  test_history.py  test_history_filters.py  test_notebooks_active.py  test_registry.py  test_search_views.py  test_snapshot_api_extended.py  test_snapshot_e2e_smoke.py  test_snapshots.py  test_templates.py  test_templates_endpoint.py  test_workspace_service.py  test_workspaces_endpoint.py
